# TP-AEDS-Hotel-Descanso-Garantido

./: CMakeLists.txt  README.md  estruturas.h  main.c
.github/workflows/: cmake-multi-platform.yml
TesteAEDS/Hotel - C/: data.h  endereco.h  estruturas.h  main.c
TesteAEDS/Hotel - C++/: data.h  hospede.h  main.cpp  pessoa.h
source/: CMakeLists.txt  Clientes.txt  Estadias.txt  Funcionarios.txt  Hotel-final  Quartos.txt  classes.h  data.h  estruturas.h  main.c  main.cpp
source/output/: Clientes.txt  Quartos.txt
